force-app/main/default/objects/Voicecall3__c/Voicecall3__c.object-meta.xml
<CustomObject>
    <description>Mock Voicecall object for testing</description>
    <label>Voicecall3</label>
    <nameField>
        <label>Voice Call</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voicecalls3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>