force-app/main/default/objects/Voicecall3__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Voicecalls3</relationshipLabel>
    <relationshipName>Voicecalls3</relationshipName>
    <type>Lookup</type>
</CustomField>