force-app/main/default/objects/Voicecall3__c/fields/CallStarted__c.field-meta.xml
<CustomField>
    <fullName>CallStarted__c</fullName>
    <label>CallStarted</label>
    <type>DateTime</type>
</CustomField>