force-app/main/default/objects/Voicecall3__c/fields/CallStatus__c.field-meta.xml
<CustomField>
    <fullName>CallStatus__c</fullName>
    <label>CallStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>