force-app/main/default/objects/Voicecall3__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Contact - the Caller</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Voicecalls3</relationshipLabel>
    <relationshipName>Voicecalls3</relationshipName>
    <type>Lookup</type>
</CustomField>