force-app/main/default/objects/Voicecall3__c/fields/PrimaryCase__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Voicecalls3</relationshipLabel>
    <relationshipName>Voicecalls3</relationshipName>
    <type>Lookup</type>
</CustomField>