force-app/main/default/objects/Voicecall3__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>CallerId__c</columns>
    <columns>CallStarted__c</columns>
    <columns>CallEnded__c</columns>
    <columns>CallStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>